impr: email content provider class clean up