@@ -1,18 +1,19 @@
-package uk.gov.hmcts.reform.fpl.service;
+package uk.gov.hmcts.reform.fpl.service.email.content;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
+import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+import uk.gov.hmcts.reform.fpl.config.HmctsCourtLookupConfiguration;
+import uk.gov.hmcts.reform.fpl.config.HmctsCourtLookupConfiguration.Court;
 import uk.gov.hmcts.reform.fpl.config.LocalAuthorityNameLookupConfiguration;
-import uk.gov.hmcts.reform.fpl.service.email.content.GatekeeperEmailContentProvider;
 
 import java.io.IOException;
 import java.util.List;
@@ -25,35 +26,40 @@ import static uk.gov.hmcts.reform.fpl.CaseDefinitionConstants.JURISDICTION;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.emptyCaseDetails;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.populatedCaseDetails;
 
+@ActiveProfiles("integration-test")
 @ExtendWith(SpringExtension.class)
-@ContextConfiguration(classes = {JacksonAutoConfiguration.class, GatekeeperEmailContentProvider.class,
-    HearingBookingService.class})
-class GatekeeperEmailContentProviderTest {
-
+@SpringBootTest(classes = {HmctsEmailContentProvider.class})
+@ContextConfiguration(classes = {JacksonAutoConfiguration.class})
+class HmctsEmailContentProviderTest {
     private static final String LOCAL_AUTHORITY_CODE = "example";
+    private static final String COURT_NAME = "Test court";
+    private static final String COURT_EMAIL_ADDRESS = "FamilyPublicLaw+test@gmail.com";
+    private static final String COURT_CODE = "11";
+
+    @MockBean
+    private HmctsCourtLookupConfiguration hmctsCourtLookupConfiguration;
 
     @MockBean
     private LocalAuthorityNameLookupConfiguration localAuthorityNameLookupConfiguration;
 
     @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private HearingBookingService hearingBookingService;
-
-    private GatekeeperEmailContentProvider gatekeeperEmailContentProvider;
+    private HmctsEmailContentProvider hmctsEmailContentProvider;
 
     @BeforeEach
-    void setup() {
-        this.gatekeeperEmailContentProvider = new GatekeeperEmailContentProvider(localAuthorityNameLookupConfiguration,
-            "null", hearingBookingService, mapper);
+    void setUp() {
+        given(hmctsCourtLookupConfiguration.getCourt(LOCAL_AUTHORITY_CODE))
+            .willReturn(new Court(COURT_NAME, COURT_EMAIL_ADDRESS, COURT_CODE));
+
+        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
+            .willReturn("Example Local Authority");
     }
 
     @Test
     void shouldReturnExpectedMapWithValidCaseDetails() throws IOException {
-        List<String> ordersAndDirections = ImmutableList.of("Emergency protection order",
-            "Contact with any named person");
+        List<String> ordersAndDirections = List.of("Emergency protection order", "Contact with any named person");
+
         Map<String, Object> expectedMap = ImmutableMap.<String, Object>builder()
+            .put("court", COURT_NAME)
             .put("localAuthority", "Example Local Authority")
             .put("dataPresent", "Yes")
             .put("fullStop", "No")
@@ -64,19 +70,17 @@ class GatekeeperEmailContentProviderTest {
             .put("nonUrgentHearing", "No")
             .put("firstRespondentName", "Smith")
             .put("reference", "12345")
-            .put("caseUrl", "null/case/" + JURISDICTION + "/" + CASE_TYPE + "/12345")
+            .put("caseUrl", String.format("http://fake-url/case/%s/%s/%s", JURISDICTION, CASE_TYPE, "12345"))
             .build();
 
-        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
-            .willReturn("Example Local Authority");
-
-        assertThat(gatekeeperEmailContentProvider.buildGatekeeperNotification(populatedCaseDetails(),
+        assertThat(hmctsEmailContentProvider.buildHmctsSubmissionNotification(populatedCaseDetails(),
             LOCAL_AUTHORITY_CODE)).isEqualTo(expectedMap);
     }
 
     @Test
     void shouldReturnSuccessfullyWithEmptyCaseDetails() throws IOException {
         Map<String, Object> expectedMap = ImmutableMap.<String, Object>builder()
+            .put("court", COURT_NAME)
             .put("localAuthority", "Example Local Authority")
             .put("dataPresent", "No")
             .put("fullStop", "Yes")
@@ -87,13 +91,10 @@ class GatekeeperEmailContentProviderTest {
             .put("nonUrgentHearing", "No")
             .put("firstRespondentName", "")
             .put("reference", "123")
-            .put("caseUrl", "null/case/" + JURISDICTION + "/" + CASE_TYPE + "/123")
+            .put("caseUrl", String.format("http://fake-url/case/%s/%s/%s", JURISDICTION, CASE_TYPE, "123"))
             .build();
 
-        given(localAuthorityNameLookupConfiguration.getLocalAuthorityName(LOCAL_AUTHORITY_CODE))
-            .willReturn("Example Local Authority");
-
-        assertThat(gatekeeperEmailContentProvider.buildGatekeeperNotification(emptyCaseDetails(),
+        assertThat(hmctsEmailContentProvider.buildHmctsSubmissionNotification(emptyCaseDetails(),
             LOCAL_AUTHORITY_CODE)).isEqualTo(expectedMap);
     }
 }
